Le correction orthographique

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                         <h6 class="timeline-date"></h6>
                         <i class="fa fa-calendar"></i> Janvier - Décembre 2021
                         <h4 class="timeline-title">TBDW</h4>
-                        <p class="timeline-text">Techniaque de base du développement d'applications(à l'Afpa)</p>
+                        <p class="timeline-text">Technique de base du développement d'applications(à l'Afpa)</p>
                         <br>
                         <i class="fa fa-map-marker mt-3"></i> AFPA, Amiens
                      </div>
@@ -489,7 +489,7 @@
                           <h6 class="timeline-date"></h6>
                           <i class="fa fa-calendar"></i> 2015 - 2016
                           <h4 class="timeline-title">Diplôme Pré-universitaire</h4>
-                          <i class="fa fa-map-marker mt-3"></i> Ispahan, IRAN
+                          <i class="fa fa-map-marker mt-3"> </i> Ispahan, IRAN
                          </div>
                        <!--end item-->
                            <!--item-->
