fix some css broblem

--- a/index.html
+++ b/index.html
@@ -437,7 +437,8 @@
                         <h4 class="timeline-title">Concepteur développeur d'applications</h4>
                         <p class="timeline-text">Titre professionnel de niveau 6 (bac +3/+4) de concepteur développeur d'applications Durée de 1490 heures (dont 420 heures en entreprise)</p>
                         <br>
-                        <i class="fa fa-map-marker mt-3"></i> AFPA, Amiens
+                        <i class="fa fa-map-marker mt-3"></i> 
+                        <a href="https://www.afpa.fr/formation-qualifiante/concepteur-developpeur-informatique" target="_blank" title="AFPA">AFPA, Amiens</a> 
                      </div>
                      <!--end item-->
                        <!--item-->
@@ -448,7 +449,8 @@
                         <h4 class="timeline-title">TBDW</h4>
                         <p class="timeline-text">Technique de base du développement d'applications</p>
                         <br>
-                        <i class="fa fa-map-marker mt-3"></i> AFPA, Amiens
+                        <i class="fa fa-map-marker mt-3"></i> 
+                        <a href="https://www.afpa.fr/formation-professionnalisante/techniques-de-base-du-developpement-d-applications" target="_blank" title="AFPA" >AFPA, Amiens</a> 
                      </div>
                      <!--end item-->
                        <!--item-->
@@ -459,7 +461,8 @@
                         <h4 class="timeline-title">DVE (Dynamique vers d'emploi - CLÉA)</h4>
                         <p class="timeline-text">Certificat de connaissances et de compétences professionnelles</p>
                         <br>
-                          <i class="fa fa-map-marker mt-3"></i> AIDEQ, Amiens
+                          <i class="fa fa-map-marker mt-3"></i> 
+                          <a href="https://candidat.pole-emploi.fr/formations/detail/3004128/true/true" target="_blank" title="AIDEQ">AIDEQ, Amiens</a> 
                      </div>
                      <!--end item-->
                        <!--item-->
@@ -470,7 +473,8 @@
                         <h4 class="timeline-title">LEA (Se former pour lire, écrire, agir)</h4>
                         <p class="timeline-text">Français mise à niveau</p>
                         <br>
-                          <i class="fa fa-map-marker mt-3"></i> AIDEQ, Amiens
+                          <i class="fa fa-map-marker mt-3"></i> 
+                          <a href="https://candidat.pole-emploi.fr/formations/detail/3004122/true/true" target="_blank" title="AIDEQ"> AIDEQ, Amiens</a>
                      </div>
                      <!--end item-->
                         <!--item-->
@@ -519,11 +523,11 @@
                         <div class="circle-dot"></div>
                         <h6 class="timeline-date"></h6>
                         <i class="fa fa-calendar"></i> Septembre - Décembre 2021
-                        <h4 class="timeline-title">Stagiaire développeuse Full Stack</h4>
+                        <h4 class="timeline-title">Stagiaire développeuse Full-Stack</h4>
                         <p class="timeline-text">- Collaborer au développement un projet web pour la mairie<br>
                           - Concevoir une base de données et la mettre en place<br>
                           - Développer la partie front-end et la partie back-end du project</p><br>
-                          <i class="fa fa-map-marker mt-3"></i><a href="https://www.adico.fr/" target="_blank" title="Adico" style="color: black;"> ADICO, Beauvais</a> 
+                          <i class="fa fa-map-marker mt-3"></i><a href="https://www.adico.fr/" target="_blank" title="Adico"> ADICO, Beauvais</a> 
                        </div>
                      <!--end item-->
                          </div>
