--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <!--Telecharge CV-->
                     <div class="row mt-5"> 
                       <div class="col-12 padd-15 pb-5">
-                     <a href="HOMAEI.pdf" target="_blank" title="CV-PDF" class="btn">Imprimer CV</a>
+                     <a href="Sana.pdf" target="_blank" title="CV-PDF" class="btn">Imprimer CV</a>
                       </div>
                     </div>
                 <!--End about section-->
@@ -383,7 +383,7 @@
         <div class="row">
                   <div class="education padd-15">
                     <div class="section-title padd-15">
-                       <h2>Formation</h2>
+                       <h2>Formations</h2>
                     </div>
                     <div class="row">
                       <div class="timeline-box padd-15">
@@ -472,7 +472,7 @@
                 
                     <div class="education padd-15">
                       <div class="section-title padd-15">
-                        <h2>Expriance</h2>
+                        <h2>Expérience</h2>
                       </div>
                       <div class="row">
                       <div class="timeline-box padd-15">
