--- a/index.html
+++ b/index.html
@@ -100,12 +100,13 @@
               <div class="about-content padd-15">
                 <div class="row">
                   <div class="about-text padd-15">
-                    <h3>Je recherche activement une alternance pour commencer ma formation UI/UX Design(Bac+5) chez Openclassrooms.</h3>
+                    <h3>Je suis activement à la recherche d'une entreprise d'accueil pour commencer ma formation UX Design(Bac+5) en alternance.</h3>
                     <p>
                       Salut! Je m'appelle Sana.<br>
-                      Ayant un profil issu du développement web et mobile, j'oriente aujourd'hui ma carrière vers l'UI/UX Design.<br>
-                      Je suis très passionné et dévoué à mon travail.<br>
-                      J'ai acquis les compétences et les connaissances nécessaires pour faire de votre projet un succès en alternance.<br>
+                      Ayant un profil issu du développement web et applications, j'oriente aujourd'hui ma carrière vers UI/UX Design.<br>
+                      L'alternance que je cherche se déroulera sur 2 ans.<br>
+                      La rentrée et les jours de la formation seront flexibles.<br>
+                      L’entreprise pourra choisir le type de contrat (professionnalisation ou apprentissage).
                       
                     </p>
                 </div>
