--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                           <button type="button" data-filter="Frameworks">Frameworks</button>
                           <button type="button" data-filter="Architecture">Architecture</button>
                           <button type="button" data-filter="CMS">CMS</button>
+                          <button type="button" data-filter="Logiciel">Logiciel</button>
                           <button type="button" data-filter="version">Version Control
                           </button>
                       </div>
@@ -297,7 +298,7 @@
                             <div class="portfolio-item padd-15" data-category="Architecture">
                               <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                  <img src="img/2.png" alt="UX/UI">
+                                  <img src="img/1_Q8-E_4SPZRK9Wm8cSAQZcw.png" alt="UX/UI">
                                 </div>
                                 <div class="portfolio-info">
                                   <h4>Réaliser la maquette - UX/UI</h4>
@@ -321,7 +322,7 @@
                             <!-- End Langages Item -->
 
                             <!-- Langages Item -->
-                            <div class="portfolio-item padd-15" data-category="Architecture">
+                            <!-- <div class="portfolio-item padd-15" data-category="Architecture">
                               <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
                                   <img src="img/mcd-software.jpg" alt="MCD">
@@ -330,7 +331,7 @@
                                   <h4>Modèle Conceptuel des Données (MCD)</h4>
                                 </div>
                               </div>
-                            </div>
+                            </div> -->
                             <!-- End Langages Item -->
 
                                 <!-- Langages Item -->
@@ -351,7 +352,7 @@
                             <div class="portfolio-item padd-15" data-category="Architecture">
                               <div class="portfolio-item-inner shadow-dark">
                                 <div class="portfolio-img">
-                                  <img src="img/2013-03-responsive-web-design-mock-up.jpg" alt="Responsive design">
+                                  <img src="img/Viewing-platforms.png" alt="Responsive design">
                                 </div>
                                 <div class="portfolio-info">
                                   <h4>Responsive design</h4>
@@ -361,13 +362,54 @@
                             <!-- End Langages Item -->
 
                                   <!-- Langages Item -->
-                                  <div class="portfolio-item padd-15" data-category="">
+                                  <div class="portfolio-item padd-15" data-category="Logiciel">
                                     <div class="portfolio-item-inner shadow-dark">
                                       <div class="portfolio-img">
                                         <img src="img/ps.jpg" alt="Adobe Photoshop">
                                       </div>
                                       <div class="portfolio-info">
                                         <h4>Adobe Photoshop</h4>
+                                      </div>
+                                    </div>
+                                  </div>
+                            <!-- End Langages Item -->
+
+                          
+                                  <!-- Langages Item -->
+                                  <div class="portfolio-item padd-15" data-category="Logiciel">
+                                    <div class="portfolio-item-inner shadow-dark">
+                                      <div class="portfolio-img">
+                                        <img src="img/1200px-Adobe_Illustrator_Icon_(CS6).svg.png" alt="Adobe Illustrator">
+                                      </div>
+                                      <div class="portfolio-info">
+                                        <h4>Adobe Illustrator</h4>
+                                      </div>
+                                    </div>
+                                  </div>
+                            <!-- End Langages Item -->
+
+                            <!-- Langages Item -->
+                            <div class="portfolio-item padd-15" data-category="Logiciel">
+                              <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                  <img src="img/formation-indesign.png" alt="Adobe InDesign">
+                                </div>
+                                <div class="portfolio-info">
+                                  <h4>Adobe InDesign</h4>
+                                </div>
+                              </div>
+                            </div>
+                      <!-- End Langages Item -->
+
+                            
+                                  <!-- Langages Item -->
+                                  <div class="portfolio-item padd-15" data-category="Logiciel">
+                                    <div class="portfolio-item-inner shadow-dark">
+                                      <div class="portfolio-img">
+                                        <img src="img/601c.png" alt="figma.jpg">
+                                      </div>
+                                      <div class="portfolio-info">
+                                        <h4>Figma</h4>
                                       </div>
                                     </div>
                                   </div>
