--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </li>
 
           <li>
-            <a href="#formations"><i class="fa fa-briefcase"></i> Les Expiences</a>
+            <a href="#formations"><i class="fa fa-briefcase"></i> Les Expériences</a>
           </li>
         </ul>
       </div>
@@ -515,7 +515,7 @@
                 
                     <div class="education padd-15">
                       <div class="section-title padd-15">
-                        <h2>Expérience</h2>
+                        <h2>Expériences</h2>
                       </div>
                       <div class="row">
                       <div class="timeline-box padd-15">
