change some image ext

--- a/portfolio/annem.html
+++ b/portfolio/annem.html
@@ -127,27 +127,27 @@
                                     <ul class="slides">
                                         <li>
                                        <img
-                                                    src="images/ann1.PNG" />
+                                                    src="images/ann1.png" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/ann3.PNG" />
+                                                    src="images/ann3.png" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/ann4.PNG" />
+                                                    src="images/ann4.png" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/ann5.PNG" />
+                                                    src="images/ann5.png" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/ann6.PNG" />
+                                                    src="images/ann6.png" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/ann7.PNG" />
+                                                    src="images/ann7.png" />
                                         </li>
                                     </ul>
                                 </div>
