--- a/portfolio/butique.html
+++ b/portfolio/butique.html
@@ -126,19 +126,19 @@
                                     <ul class="slides">
                                         <li>
                                        <img
-                                                    src="images/style2.PNG" />
+                                                    src="images/style2.png" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/style3.PNG" />
+                                                    src="images/style3.png" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/style4.PNG" />
+                                                    src="images/style4.png" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/style5.PNG" />
+                                                    src="images/style5.png" />
                                         </li>
                                     </ul>
                                 </div>
