--- a/portfolio/healthcare.html
+++ b/portfolio/healthcare.html
@@ -127,19 +127,19 @@
                                     <ul class="slides">
                                         <li>
                                        <img
-                                                    src="images/healthcare4.PNG" />
+                                                    src="images/healthcare4.png" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/healthcare5.PNG" />
+                                                    src="images/healthcare5.png" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/healthcare6.PNG" />
+                                                    src="images/healthcare6.png" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/healthcare.PNG" />
+                                                    src="images/healthcare.png" />
                                         </li>
                                         <li>
                                             <img
@@ -168,11 +168,11 @@
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/healthcare23.PNG" />
+                                                    src="images/healthcare23.png" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/healthcare24.PNG" />
+                                                    src="images/healthcare24.png" />
                                         </li>
                                     </ul>
                                 </div>
