--- a/portfolio/jaune.html
+++ b/portfolio/jaune.html
@@ -130,16 +130,16 @@
                                  <ul class="slides">
                                   
                                    <li>
-                                     <img src="images/jaune3.PNG" />
+                                     <img src="images/jaune3.png" />
                                    </li>
                                    <li>
-                                     <img src="images/jaune4.PNG" />
+                                     <img src="images/jaune4.png" />
                                    </li>
                                    <li>
-                                    <img src="images/jaune2.PNG" />
+                                    <img src="images/jaune2.png" />
                                    </li>
                                    <li>
-                                    <img src="images/jaune5.PNG" />
+                                    <img src="images/jaune5.png" />
                                   </li>
                                 
                                  </ul>
