--- a/portfolio/work_1.html
+++ b/portfolio/work_1.html
@@ -135,16 +135,16 @@
 								<div class="flexslider">
 								  <ul class="slides">
 								    <li>
-								     <img src="images/krossin2.PNG" />
+								     <img src="images/krossin2.png" />
 								    </li>
 								    <li>
-								      <img src="images/krossin6.PNG" />
+								      <img src="images/krossin6.png" />
 								    </li>
 								    <li>
-								      <img src="images/krossin4.PNG" />
+								      <img src="images/krossin4.png" />
 								    </li>
 								    <li>
-								      <img src="images/krossin5.PNG" />
+								      <img src="images/krossin5.png" />
 								    </li>
 								  </ul>
 								</div>
