--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -80,7 +80,7 @@
 					<div class="fh5co-imgs col-md-8 animate-box">
 						
 						<div class="img-holder-1 col-md-push-4 animate-box">
-							<img src="images/Krossin.png" alt="Krossin-muutto">
+							<img src="images/Krossin.PNG" alt="Krossin-muutto">
 						</div>
 						<div class="img-holder-2 animate-box">
 							<img src="images/krossin-mobile-1.png" alt="Krossin-muutto">
