--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -80,7 +80,7 @@
 					<div class="fh5co-imgs col-md-8 animate-box">
 						
 						<div class="img-holder-1 col-md-push-4 animate-box">
-							<img src="images/Krossin.png" alt="Krossin-muutto">
+							<img src="images/Krossin.PNG" alt="Krossin-muutto">
 						</div>
 						<div class="img-holder-2 animate-box">
 							<img src="images/krossin-mobile-1.png" alt="Krossin-muutto">
@@ -124,7 +124,7 @@
 				<div class="fh5co-project-inner row">
 					<div class="fh5co-imgs col-md-8 animate-box">
 						<div class="img-holder-1 animate-box">
-							<img src="images/annemasse.png" alt="annemasse">
+							<img src="images/annemasse.PNG" alt="annemasse">
 						</div>
 						<div class="img-holder-2 animate-box">
 							<img src="images/mobil.png" alt="annemasse">
@@ -146,7 +146,7 @@
 				<div class="fh5co-project-inner row">
 					<div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
 						<div class="img-holder-1 animate-box">
-							<img src="images/boulangerie2.png" alt="boulangerie">
+							<img src="images/boulangerie2.PNG" alt="boulangerie">
 						</div>
 						<!-- <div class="img-holder-2 animate-box">
 							<img src="images/" alt="">
@@ -169,7 +169,7 @@
 				<div class="fh5co-project-inner row">
 					<div class="fh5co-imgs col-md-8 animate-box">
 						<div class="img-holder-1 animate-box">
-							<img src="images/annn.png" alt="Extramuutto">
+							<img src="images/annn.PNG" alt="Extramuutto">
 						</div>
 						<!-- <div class="img-holder-2 animate-box">
 							<img src="#" alt="Extramuutto">
@@ -191,7 +191,7 @@
 				<div class="fh5co-project-inner row">
 					<div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
 						<div class="img-holder-1 animate-box">
-							<img src="images/intranet.png" alt="vêtements">
+							<img src="images/intranet.PNG" alt="vêtements">
 						</div>
 						<!-- <div class="img-holder-2 animate-box">
 							<img src="images/mob.png" alt="vêtements">
@@ -213,7 +213,7 @@
 				<div class="fh5co-project-inner row">
 					<div class="fh5co-imgs col-md-8 animate-box">
 						<div class="img-holder-1 animate-box">
-							<img src="images/Extramuutto.png" alt="Extramuutto">
+							<img src="images/Extramuutto.PNG" alt="Extramuutto">
 						</div>
 						<div class="img-holder-2 animate-box">
 							<img src="images/extramuutto-mobil.png" alt="Extramuutto">
@@ -235,10 +235,10 @@
 				<div class="fh5co-project-inner row">
 					<div class="fh5co-imgs col-md-8 col-md-push-4 animate-box">
 						<div class="img-holder-1 animate-box">
-							<img src="images/style.png" alt="vêtements">
+							<img src="images/style.PNG" alt="vêtements">
 						</div>
 						<div class="img-holder-2 animate-box">
-							<img src="images/style1.png" alt="vêtements">
+							<img src="images/style1.PNG" alt="vêtements">
 						</div>
 					</div>
 					<div class="fh5co-text col-md-4 col-md-pull-8 animate-box">
