update image tags

--- a/portfolio/annemasse.html
+++ b/portfolio/annemasse.html
@@ -127,11 +127,11 @@
                                     <ul class="slides">
                                         <li>
                                        <img
-                                                    src="images/annemasse.png" alt="annemasse">
+                                                    src="images/annemasse.PNG" alt="annemasse">
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/annemasse1.png" alt="annemasse1">
+                                                    src="images/annemasse1.PNG" alt="annemasse1">
                                         </li>
                     
                                     </ul>
