--- a/portfolio/boulangerie.html
+++ b/portfolio/boulangerie.html
@@ -126,15 +126,15 @@
                                     <ul class="slides">
                                         <li>
                                        <img
-                                                    src="images/boulangerie3.png" />
+                                                    src="images/boulangerie3.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/boulangerie5.png" />
+                                                    src="images/boulangerie5.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/boulangerie4.png" />
+                                                    src="images/boulangerie4.PNG" />
                                         </li>
     
                                     </ul>
