--- a/portfolio/healthcare.html
+++ b/portfolio/healthcare.html
@@ -127,23 +127,23 @@
                                     <ul class="slides">
                                         <li>
                                        <img
-                                                    src="images/healthcare4.png" />
+                                                    src="images/healthcare4.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/healthcare5.png" />
+                                                    src="images/healthcare5.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/healthcare6.png" />
+                                                    src="images/healthcare6.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/healthcare.png" />
+                                                    src="images/healthcare.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/Healthcare-intranet.png" />
+                                                    src="images/Healthcare-intranet.PNG" />
                                         </li>
                                     </ul>
                                 </div>
@@ -160,19 +160,19 @@
                                     <ul class="slides">
                                         <li>
                                        <img
-                                                    src="images/Healthcare-22.png" />
+                                                    src="images/Healthcare-22.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/healthcare26.png" />
+                                                    src="images/healthcare26.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/healthcare23.png" />
+                                                    src="images/healthcare23.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/healthcare24.png" />
+                                                    src="images/healthcare24.PNG" />
                                         </li>
                                     </ul>
                                 </div>
