--- a/portfolio/annem.html
+++ b/portfolio/annem.html
@@ -95,7 +95,7 @@
 
                         <div class="row animate-box">
                             <div class="col-md-12">
-                                <figure><img src="images/MacBook-Pro-16-01-FREE (1).png" class="img-responsive" alt="ANNEMASSE"></figure>
+                                <figure><img src="images/MacBook-Pro-16-01-FREE (1).PNG" class="img-responsive" alt="ANNEMASSE"></figure>
                             </div>
                         </div>
 
@@ -127,27 +127,27 @@
                                     <ul class="slides">
                                         <li>
                                        <img
-                                                    src="images/ann1.png" />
+                                                    src="images/ann1.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/ann3.png" />
+                                                    src="images/ann3.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/ann4.png" />
+                                                    src="images/ann4.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/ann5.png" />
+                                                    src="images/ann5.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/ann6.png" />
+                                                    src="images/ann6.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/ann7.png" />
+                                                    src="images/ann7.PNG" />
                                         </li>
                                     </ul>
                                 </div>
