--- a/portfolio/intranet.html
+++ b/portfolio/intranet.html
@@ -126,23 +126,23 @@
                                     <ul class="slides">
                                         <li>
                                        <img
-                                                    src="images/intranet1.png" />
+                                                    src="images/intranet1.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/intranet2.png" />
+                                                    src="images/intranet2.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/intranet3.png" />
+                                                    src="images/intranet3.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/intranet4.png" />
+                                                    src="images/intranet4.PNG" />
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/intranet5.png" />
+                                                    src="images/intranet5.PNG" />
                                         </li>
                                     </ul>
                                 </div>
