--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -157,7 +157,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<p><small><br> crée par <a href="http://freehtml5.co/" target="_blank">Sana HOMAEI</a> </small> </p>
+						<p><small><br> crée par <a href="https://sana-hm.github.io/" target="_blank">Sana HOMAEI</a> </small> </p>
 						<ul class="fh5co-social">
 							<li>
 								<a href="#"><i class="icon-twitter"></i></a>
