update image tags

--- a/portfolio/annem.html
+++ b/portfolio/annem.html
@@ -95,7 +95,7 @@
 
                         <div class="row animate-box">
                             <div class="col-md-12">
-                                <figure><img src="images/MacBook-Pro-16-01-FREE (1).PNG" class="img-responsive" alt="ANNEMASSE"></figure>
+                                <figure><img src="images/MacBook-Pro-16-01-FREE-1.png" class="img-responsive" alt="ANNEMASSE"></figure>
                             </div>
                         </div>
 
