--- a/portfolio/healthcare.html
+++ b/portfolio/healthcare.html
@@ -127,7 +127,7 @@
                                     <ul class="slides">
                                         <li>
                                        <img
-                                                    src="images/healthcare4.PNG" />
+                                                    src="images/Healthcare4.png" />
                                         </li>
                                         <li>
                                             <img
@@ -139,7 +139,7 @@
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/healthcare.PNG" />
+                                                    src="images/Healthcare.png" />
                                         </li>
                                         <li>
                                             <img
