--- a/portfolio/boulangerie.html
+++ b/portfolio/boulangerie.html
@@ -147,23 +147,25 @@
 
             </div>
         </div>
+
         <footer id="fh5co-footer" class="js-fh5co-waypoint">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <p><small> <br> Créer par<a href="#" target="_blank"> Sana</a> </small> </p>
-                        <ul class="fh5co-social">
-                            <li>
-                                <a href="https://www.linkedin.com/in/sana-homaei/"><i class="icon-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/Sana-hm"><i class="icon-github"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </footer>
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 text-center">
+						<p><small><br> crée par <a href="https://sana-hm.github.io/" target="_blank">Sana HOMAEI</a> </small> </p>
+						<ul class="fh5co-social">
+							<li>
+								<a href="https://www.linkedin.com/in/sana-homaei/"><i class="icon-linkedin"></i></a>
+							</li>
+							<li>
+								<a href="https://github.com/Sana-hm"><i class="icon-github"></i></a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</footer>
+        
     </div>
 </body>
 
