--- a/portfolio/work_1.html
+++ b/portfolio/work_1.html
@@ -155,11 +155,11 @@
 			</div>
 		</div>
 
-		<footer id="fh5co-footer" class="js-fh5co-waypoint">
+        <footer id="fh5co-footer" class="js-fh5co-waypoint">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<p><small> <br> Créer par<a href="#" target="_blank"> Sana</a> </small> </p>
+						<p><small><br> crée par <a href="https://sana-hm.github.io/" target="_blank">Sana HOMAEI</a> </small> </p>
 						<ul class="fh5co-social">
 							<li>
 								<a href="https://www.linkedin.com/in/sana-homaei/"><i class="icon-linkedin"></i></a>
@@ -172,6 +172,7 @@
 				</div>
 			</div>
 		</footer>
+		
 	</div>
 	</body>
 </html>
