--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -272,26 +272,24 @@
 			</div>
 		</div>
 		
-		<footer id="fh5co-footer" class="js-fh5co-waypoint">
+        <footer id="fh5co-footer" class="js-fh5co-waypoint">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<p><small><br> crée par  <a href="http://freehtml5.co/" target="_blank">Sana HOMAEI</a></small> </p>
+						<p><small><br> crée par <a href="https://sana-hm.github.io/" target="_blank">Sana HOMAEI</a> </small> </p>
 						<ul class="fh5co-social">
 							<li>
-								<a href="#"><i class="icon-twitter"></i></a>
+								<a href="https://www.linkedin.com/in/sana-homaei/"><i class="icon-linkedin"></i></a>
 							</li>
 							<li>
-								<a href="#"><i class="icon-facebook"></i></a>
-							</li>
-							<li>
-								<a href="#"><i class="icon-instagram"></i></a>
+								<a href="https://github.com/Sana-hm"><i class="icon-github"></i></a>
 							</li>
 						</ul>
 					</div>
 				</div>
 			</div>
 		</footer>
+		
 	</div>
 	</body>
 </html>
