--- a/portfolio/healthcare.html
+++ b/portfolio/healthcare.html
@@ -160,7 +160,7 @@
                                     <ul class="slides">
                                         <li>
                                        <img
-                                                    src="images/Healthcare-22.PNG" />
+                                                    src="images/Healthcare-22.png" />
                                         </li>
                                         <li>
                                             <img
@@ -168,7 +168,7 @@
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/healthcare23.PNG" />
+                                                    src="images/Healthcare23.PNG" />
                                         </li>
                                         <li>
                                             <img
