--- a/portfolio/healthcare.html
+++ b/portfolio/healthcare.html
@@ -168,7 +168,7 @@
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/Healthcare23.PNG" />
+                                                    src="images/Healthcare23.png" />
                                         </li>
                                         <li>
                                             <img
