--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,6 +1,6 @@
 	
 <!DOCTYPE html>
- <html class="no-js"> 
+ <html class="no-js" lang="fr"> 
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -46,7 +46,7 @@
 	
 	<div class="fh5co-loader"></div>
 	<div id="fh5co-page">
-		<nav id="fh5co-nav" role="navigation">
+		<nav id="fh5co-nav">
 			<ul>
 				<li class="animate-box fh5co-active"><a href="index.html" class="transition">Accueil</a></li>
 				<li class="animate-box"><a href="about.html" class="transition">Bio</a></li>
@@ -56,7 +56,7 @@
 			</a> -->
 		</nav>
 		
-		<header id="fh5co-header" role="banner" class="fh5co-project js-fh5co-waypoint no-border" data-colorbg="#222222" data-next="yes">
+		<header id="fh5co-header" class="fh5co-project js-fh5co-waypoint no-border" data-colorbg="#222222" data-next="yes">
 			<div class="container">
 				<div class="fh5co-text-wrap animate-box">
 					<div class="fh5co-intro-text">
