--- a/portfolio/intranet.html
+++ b/portfolio/intranet.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js">
+<html class="no-js" lang="fr">
 
 <head>
     <meta charset="utf-8">
@@ -39,7 +39,7 @@
     <!-- Bootstrap -->
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/jquery.flexslider-min.js"></script
+    <script src="js/jquery.flexslider-min.js"></script>
 
    <script src="js/viewport-units-buggyfill.js"></script>
 
@@ -52,7 +52,7 @@
 <body>
     <div class="fh5co-loader"></div>
     <div id="fh5co-page">
-        <nav id="fh5co-nav" role="navigation">
+        <nav id="fh5co-nav">
             <ul>
                 <li class="animate-box"><a href="index.html" class="transition">Accueil</a></li>
                 <li class="animate-box"><a href="about.html" class="transition">Bio</a></li>
@@ -61,7 +61,7 @@
                 <span class="fh5co-circle"></span>
             </a> -->
         </nav>
-        <header id="fh5co-header" role="banner" class="fh5co-project js-fh5co-waypoint no-border" data-colorbg="#222222"
+        <header id="fh5co-header" class="fh5co-project js-fh5co-waypoint no-border" data-colorbg="#222222"
             data-next="yes">
             <div class="container">
                 <div class="fh5co-text-wrap animate-box">
@@ -126,23 +126,23 @@
                                     <ul class="slides">
                                         <li>
                                        <img
-                                                    src="images/intranet1.PNG" />
+                                                    src="images/intranet1.PNG" alt="">
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/intranet2.PNG" />
+                                                    src="images/intranet2.PNG" alt="">
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/intranet3.PNG" />
+                                                    src="images/intranet3.PNG" alt="">
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/intranet4.PNG" />
+                                                    src="images/intranet4.PNG" alt="">
                                         </li>
                                         <li>
                                             <img
-                                                    src="images/intranet5.PNG" />
+                                                    src="images/intranet5.PNG" alt="">
                                         </li>
                                     </ul>
                                 </div>
