--- a/portfolio/jaune.html
+++ b/portfolio/jaune.html
@@ -1,6 +1,6 @@
 	
 <!DOCTYPE html>
-<html class="no-js"> 
+<html class="no-js" lang="fr"> 
    <head>
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -51,7 +51,7 @@
    <body>
    <div class="fh5co-loader"></div>
    <div id="fh5co-page">
-       <nav id="fh5co-nav" role="navigation">
+       <nav id="fh5co-nav">
            <ul>
                <li class="animate-box"><a href="index.html" class="transition">Accueil</a></li>
                <li class="animate-box"><a href="about.html" class="transition">Bio</a></li>
@@ -60,7 +60,7 @@
                <span class="fh5co-circle"></span>
            </a> -->
        </nav>
-       <header id="fh5co-header" role="banner" class="fh5co-project js-fh5co-waypoint no-border" data-colorbg="#222222" data-next="yes">
+       <header id="fh5co-header" class="fh5co-project js-fh5co-waypoint no-border" data-colorbg="#222222" data-next="yes">
            <div class="container">
                <div class="fh5co-text-wrap animate-box">
                    <div class="fh5co-intro-text">
@@ -128,16 +128,16 @@
                                  <ul class="slides">
                                   
                                    <li>
-                                     <img src="images/jaune3.PNG" />
+                                     <img src="images/jaune3.PNG" alt="">
                                    </li>
                                    <li>
-                                     <img src="images/jaune4.PNG" />
+                                     <img src="images/jaune4.PNG" alt="">
                                    </li>
                                    <li>
-                                    <img src="images/jaune2.PNG" />
+                                    <img src="images/jaune2.PNG" alt="">
                                    </li>
                                    <li>
-                                    <img src="images/jaune5.PNG" />
+                                    <img src="images/jaune5.PNG" alt="">
                                   </li>
                                 
                                  </ul>
