--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -1,6 +1,6 @@
 	
 <!DOCTYPE html>
- <html class="no-js">
+ <html class="no-js" lang="fr">
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -50,7 +50,7 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="fh5co-page">
-		<nav id="fh5co-nav" role="navigation">
+		<nav id="fh5co-nav">
 			<ul>
 				<li class="animate-box"><a href="index.html" class="transition">Accueil</a></li>
 				<li class="animate-box fh5co-active"><a href="about.html" class="transition">Bio</a></li>
@@ -59,7 +59,7 @@
 				<span class="fh5co-circle"></span>
 			</a> -->
 		</nav>
-		<header id="fh5co-header" role="banner" class="fh5co-project js-fh5co-waypoint no-border" data-colorbg="#222222" data-next="yes">
+		<header id="fh5co-header" class="fh5co-project js-fh5co-waypoint no-border" data-colorbg="#222222" data-next="yes">
 			<div class="container">
 				<div class="fh5co-text-wrap animate-box">
 					<div class="fh5co-intro-text">
@@ -129,7 +129,7 @@
 										<a href="https://www.linkedin.com/in/sana-homaei/" target="_blank"><i class="icon-linkedin"></i> LinkedIn</a>
 									</li>
 									<li>
-										<a href="tel:0754541340"><i class="icon-mobile" target="_blank"></i> Téléphone</a>
+										<a href="tel:0754541340" target="_blank"><i class="icon-mobile"></i> Téléphone</a>
 									</li>
 									<li>
 										<a href="https://sana-hm.github.io/" target="_blank"><i class="icon-file-text"></i> CV en lign</a>
