add portfolio link to cv nav

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
           <li>
             <a href="#formations"><i class="fa fa-briefcase"></i> Les Expériences</a>
           </li>
+
+          <li>
+            <a href="/portfolio/"><i class="fa fa-image"></i>Mon Portfolio</a>
+          </li>
         </ul>
       </div>
       <!--End Aside-->
