--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <div class="about-content padd-15">
                 <div class="row">
                   <div class="about-text padd-15">
-                    <h3>Je suis alternante de première année de master en Chef de projet multimédia chez Beorn Technologies </h3>
+                    <h3>Je suis alternante de première année de master en Chef de projet multimédia chez Ynov</h3>
                     <p>
                       Salut! Je m'appelle Sana.<br>
                       Ayant un profil issu du développement web et applications, j'oriente aujourd'hui ma carrière vers UI/UX Design.<br>
